syntax = "proto3";

option go_package="../network/gRPC/vote_message";

package vote_message;

service BlockchainVoteService {
  rpc SubmitVote(VoteRequest) returns (VoteResponse);
}

message VoteRequest {
  string hash = 1;
  string option = 2;
  string topic = 3;
}

message VoteResponse {
  string status = 1;
  string message = 2;
  bool success = 3;
}